2-nd caaspi commit

--- a/#src/_about.html
+++ b/#src/_about.html
@@ -10,7 +10,7 @@
                     <img src="img/video_btn.svg" alt="">
                 </a>
             </div>
-            <video src="video/Globe_MiddleEast1_Videvo.mov" class="about-video-content" muted autoplay loop></video>
+            <video src="video/cherry_picker.mp4" class="about-video-content" muted autoplay loop></video>
         </div>
     </div>
 </section>
