--- a/#src/_about.html
+++ b/#src/_about.html
@@ -4,6 +4,10 @@
             <span class="text-main">Caaspi</span> - the world's biggest digital product content provider
         </h1>
         <p class="about-header-text">Casspi is a CaaS (Content-as-a-Service) platform, which makes it easy for sellers to integrate brands’ digital product content on their eCommerce websites. </p>
+    </div>
+</section>
+<section class="about-video-container">
+    <div class="container">
         <div class="about-video">
             <div class="about-video-wrapper">
                 <a href="#" class="about-video-btn">
