--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container">
         <div class="logo">
-            <img src="img/Logo.svg" alt="logo">
+            <img src="img/logo.png" alt="logo">
         </div>
     </div>
 </header>
