--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,7 +1,15 @@
 <header class="header">
     <div class="container">
-        <div class="logo">
-            <img src="img/logo.png" alt="logo">
+        <div class="header-content">
+            <div class="logo">
+                <img src="img/logo.png" alt="logo">
+            </div>
+
+            <div class="header-menu">
+                <a href="#">How it works</a>
+                <a href="#">Download</a>
+                <a href="#">Add website</a>
+            </div>
         </div>
     </div>
 </header>
